--- a/ApiTest/templates/search.html
+++ b/ApiTest/templates/search.html
@@ -238,6 +238,33 @@
     </div>
 </div>
 
+<!--性能测试-->
+<div class="layui-row" id="locust" style="display: none;">
+    <div class="layui-col-md11">
+
+        <blockquote class="layui-elem-quote layui-quote-nm" style="margin-top: 20px;">
+            <a href="http://localhost:8089/" style="font-size: 20px;color: #1E9FFF;padding-left: 20px;" target="_blank">点击前往-->Start
+                new Locust swarm</a>
+        </blockquote>
+
+        <blockquote class="layui-elem-quote" style="margin-top: 20px;padding-left: 20px;">注意:如果测试结束，请回到此页面关闭8089端口进程
+        </blockquote>
+
+        <form class="layui-form" lay-filter="locust">
+
+            <div class="layui-form-item" style="margin-top: 20px;">
+                <div class="layui-input-block">
+                    <button class="layui-btn" lay-submit lay-filter="locust"
+                            style="float: right;background-color: cornflowerblue;">关闭8089端口
+                    </button>
+                </div>
+            </div>
+
+        </form>
+    </div>
+</div>
+
+<!--serch页面-->
 <div class="">
     <div style="text-align: center;margin: 0 auto;width: 350px;margin-top: 10%;">
         <img src="./../static/images/1575792094_207136.png"/>
@@ -332,9 +359,6 @@
                         , height: 'full-225'
                         , cols: [[ //表头, fixed: 'left'
                 {type: 'checkbox'}
-                //, {title: '操作', toolbar: '#barDemo', width: 80, align: "left"}
-                //, {field: 'caseid', title: 'ID', width: 60,  align: "left"}
-                //, {field: 'sort', title: '排序号', width: 60,  align: "left"}
                 , {field: 'identity', title: '', width: 70, align: "center", templet: "#identityTpl"}
                 , {field: 'casename', title: '接口名称', width: 250, align: "left", excel: {color:'0040ff',bgColor:'f3fef3'}, templet: "#casenameTpl"}// filter: true
                 , {field: 'url', title: '请求路径', width: 250, align: "left",templet:function (res) {
@@ -773,6 +797,113 @@
                                     docE.webkitRequestFullScreen();
                                 }
                                 break;
+                            //性能测试
+                            case 'locust':
+                                var data = checkStatus.data;
+                                console.log(data);
+                                if (data.length == 0) {
+                                    layer.msg("请先选中需要执行的用例", {
+                                        icon: 2,
+                                        offset: "t"
+                                    });
+                                } else {
+                                    var l = [];
+                                    for (i = 0; i < data.length; i++) {
+                                        var dic = {};
+                                        dic["caseid"] = i;
+                                        dic['identity'] = data[i]['identity'];
+                                        dic["url"] = data[i]['url'];
+                                        dic['method'] = data[i]['method'];
+                                        dic['params'] = data[i]['params'];
+                                        dic['body'] = data[i]['body'];
+                                        l.push(dic);
+                                    }
+                                    console.log(l);
+                                    $.ajax({
+                                        cache: false,
+                                        url: "/singleapi/locust/1/",
+                                        dataType: 'json',
+                                        type: 'PUT',
+                                        //async: false,
+                                        data: {
+                                            "request": JSON.stringify(l)
+                                        },
+                                        //请求前的处理,加载loading
+                                        beforeSend: function () {
+                                            var locust_test = layer.open({
+                                                type: 1
+                                                , title: ["locust接口性能测试"]
+                                                , skin: "layui-layer-lan"
+                                                , shade: 0.6
+                                                , shadeClose: true
+                                                , moveOut: true
+                                                , area: ["30%", '33%'] //自定义文本域宽高
+                                                , content: $("#locust").html(),
+                                                success: function () {
+                                                    layui.use('form', function () {
+                                                        var form = layui.form;
+                                                        //关闭locust，
+                                                        form.on('submit(locust)', function (data) {
+                                                            $.ajax({
+                                                                cache: false,
+                                                                url: "/singleapi/close_locust/",
+                                                                dataType: 'json',
+                                                                type: 'GET',
+                                                                success: function (data) {
+                                                                    console.log(data);
+                                                                    if (data.code == 200) {
+                                                                        layer.msg(data.msg, {
+                                                                            offset: 't',
+                                                                            icon: 6,
+                                                                        });
+                                                                    } else if (data.code == 500) {
+                                                                        layer.msg(data.msg, {
+                                                                            offset: 't',
+                                                                            icon: 5,
+                                                                        });
+                                                                    }
+
+                                                                },
+                                                                error: function (data) {
+                                                                    console.log(data);
+                                                                    layer.msg(data, {
+                                                                        icon: 5,
+                                                                        offset: 't',
+                                                                    });
+                                                                },
+                                                                complete: function () {
+                                                                    layer.close(locust_test);
+                                                                }
+
+                                                            });
+                                                            return false;//阻止表单跳转
+                                                        });
+                                                    })
+                                                }
+
+                                            });
+                                        },
+                                        success: function (data) {
+                                            console.log(data);
+                                            layer.msg(data.msg, {
+                                                offset: 't',
+                                                icon: 6,
+                                            });
+                                        },
+                                        error: function (data) {
+                                            console.log(data);
+                                            let res = JSON.stringify(data, null, 4);
+                                            layer.msg(data, {
+                                                icon: 5,
+                                                offset: 't',
+                                            });
+                                        },
+                                        complete: function () {
+                                            //layer.close(l_index);
+                                        }
+                                    });
+                                }
+                                break;
                         }
 
                     });
@@ -803,7 +934,7 @@
                                         zIndex: layer.zIndex,
                                         maxmin: true, //开启最大化最小化按钮
                                         area: ['600px', '1200px'],
-                                        content: "/detail/?id=" + data.caseid,
+                                        content: "/detail/?singleid=" + data.caseid,
                                     });
                                     layer.full(index);
                                 },
@@ -1272,7 +1403,7 @@
         <button id="Runcase" class="layui-btn layui-btn-sm" lay-event="run_case">执行用例</button>
         <button class="layui-btn layui-btn-sm" lay-event="repeat_run">重复执行</button>
         <button id="Dingding" class="layui-btn layui-btn-sm" lay-event="dingding">钉钉通知</button>
-{#        <button class="layui-btn layui-btn-sm" lay-event="export_case">导出用例</button>#}
+        <button class="layui-btn layui-btn-sm" lay-event="locust">性能测试</button>
     </div>
 </script>
 <!--用例名字超链接模板-->
