--- a/ApiTest/templates/search.html
+++ b/ApiTest/templates/search.html
@@ -1194,7 +1194,7 @@
 <!--表头按钮 layui-btn-disabled-->
 <script>
     //获取令牌
-    function gettoken() {
+    function get_token() {
         var update_token_api = layer.open({
             //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
             type: 1,
@@ -1399,7 +1399,7 @@
 <!--表头按钮功能-->
 <script type="text/html" id="toolbarDemo">
     <div class="layui-btn-container">
-        <button type="button" onclick="update_roleinfo()" class="layui-btn layui-btn-sm">用户信息</button>
+        <button type="button" onclick="update_role_info()" class="layui-btn layui-btn-sm">用户信息</button>
         <button id="Runcase" class="layui-btn layui-btn-sm" lay-event="run_case">执行用例</button>
         <button class="layui-btn layui-btn-sm" lay-event="repeat_run">重复执行</button>
         <button id="Dingding" class="layui-btn layui-btn-sm" lay-event="dingding">钉钉通知</button>
