--- a/ApiTest/templates/singleApi.html
+++ b/ApiTest/templates/singleApi.html
@@ -219,17 +219,70 @@
 		</div>
 	</div>
 
+
+    <!--更新用户信息-->
+	<div class="layui-row" id="add_role" style="display: none;">
+		<div class="layui-col-md11">
+			<form class="layui-form" lay-filter="add_role">
+
+				<div class="layui-form-item" style="margin-top: 20px;">
+					<label class="layui-form-label">所属系统</label>
+					<div class="layui-input-block">
+						<input type="radio" name="system" value="erms" title="数据档案室">
+						<input type="radio" name="system" value="tdr" title="数字档案馆">
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">角色</label>
+					<div class="layui-input-block erms" style="display: none;">
+						<input type="radio"  name="identity" value="sysadmin" title="系统管理员">
+						<input type="radio"  name="identity" value="admin" title="单位管理员">
+						<input type="radio"  name="identity" value="ast" title="单位档案员">
+					</div>
+					<div class="layui-input-block tdr" style="display: none;">
+						<input type="radio"  name="identity" value="tdradmin" title="系统管理员">
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<label class="layui-form-label">账号</label>
+					<div class="layui-input-block">
+						<input type="text" id="username" name="username" required lay-verify="required"
+							   placeholder="请输入账号" autocomplete="off" class="layui-input">
+					</div>
+				</div>
+				<div class="layui-form-item layui-form-text">
+					<label class="layui-form-label">密码</label>
+					<div class="layui-input-block">
+						<input type="text" id="password" name="password" required lay-verify="required"
+							   placeholder="请输入密码" autocomplete="off" class="layui-input">
+					</div>
+				</div>
+				<div class="layui-form-item">
+					<div class="layui-input-block">
+						<button class="layui-btn layui-btn-warm" lay-submit lay-filter="add_role"
+								style="float: right;margin-left:5px;">立即提交
+						</button>
+						<button type="reset" style="float: right;" class="layui-btn layui-btn-primary">重置</button>
+					</div>
+				</div>
+			</form>
+		</div>
+	</div>
+
 	<!--更新用户信息-->
 	<div class="layui-row" id="update_role_info" style="display: none;">
 		<div class="layui-col-md11">
-			<form class="layui-form" lay-filter="update_roleinfo">
+			<form class="layui-form" lay-filter="update_role_info">
 
 				<div class="layui-form-item" style="margin-top: 20px;">
-					<button type="button" class="layui-btn layui-btn-warm" onclick="gettoken()"
+					<button type="button" class="layui-btn layui-btn-warm" onclick="get_token()"
 							style="float: right;margin-left: 10px;">获取Token
 					</button>
 					<button type="button" class="layui-btn layui-btn-warm" onclick="get_user_info()"
 							style="float: right;">用户信息
+					</button>
+                    <button type="button" class="layui-btn layui-btn-warm" onclick="add_role()"
+							style="float: right;">添加系统角色
 					</button>
 				</div>
 				<div class="layui-form-item" style="margin-top: 20px;">
@@ -272,7 +325,7 @@
 				</div>
 				<div class="layui-form-item">
 					<div class="layui-input-block">
-						<button class="layui-btn layui-btn-warm" lay-submit lay-filter="update_roleinfo"
+						<button class="layui-btn layui-btn-warm" lay-submit lay-filter="update_role_info"
 								style="float: right;margin-left:5px;">立即提交
 						</button>
 						<button type="reset" style="float: right;" class="layui-btn layui-btn-primary">重置</button>
@@ -485,11 +538,12 @@
             , url: '/singleapi/list/' //数据接口"exports"
             , toolbar: '#toolbarDemo'
             , defaultToolbar: [
-                'filter', {title: '导出数据', layEvent: 'export_case', icon: 'layui-icon-download-circle'}, {
-                    title: '全屏显示',
-                    layEvent: 'fullScreen',
-                    icon: 'layui-icon-top'
-                }, {title: '导入数据', layEvent: 'import_case', icon: 'layui-icon-upload-circle'}, 'print']
+                {title: '批量删除', layEvent: 'batch_delete', icon: 'layui-icon-delete'},
+                {title: '导出数据', layEvent: 'export_case', icon: 'layui-icon-download-circle'},
+                {title: '全屏显示', layEvent: 'fullScreen', icon: 'layui-icon-top'},
+                {title: '导入数据', layEvent: 'import_case', icon: 'layui-icon-upload-circle'},
+                'filter','print'
+            ]
             , title: '接口测试'
             , page: {groups: 5} //开启分页
 			, loading: false
@@ -565,7 +619,8 @@
                 //, {field: 'caseid', title: 'ID', width: 60,  align: "left"}
                 //, {field: 'sort', title: '排序号', width: 60,  align: "left"}
                 , {field: 'identity', title: '', width: 70, align: "center", templet: "#identityTpl"}
-                , {field: 'casename', title: '接口名称', width: 220, align: "left", excel: {color:'0040ff',bgColor:'f3fef3'}, templet: "#casenameTpl",children:[
+                , {field: 'casename', title: '接口名称', width: 220, align: "left", excel: {color:'0040ff',bgColor:'f3fef3'}, templet: "#casenameTpl",
+                    children:[
                     {
 						elem: '#templateTable'
 						, url: "//"
@@ -641,7 +696,7 @@
         	}
             , id: 'testReload'
 			,rowEvent: function (obj) {
-				obj.tr.css({'background':'#009688','color':'white'}).siblings().removeAttr('style')
+				obj.tr.css({'background':'#5FB878','color':'white'}).siblings().removeAttr('style')
 			}
             , done: function (res) {   //返回数据执行回调函数
                 layer.close(index);    //返回数据关闭loading
@@ -1522,7 +1577,7 @@
 </script>
 <script>
     //获取令牌
-    function gettoken() {
+    function get_token() {
         var update_token_api = layer.open({
             //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
             type: 1,
@@ -1661,6 +1716,85 @@
             }
         });
     }
+    //添加用户角色
+    function add_role() {
+        var add_role = layer.open({
+            //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
+            type: 1,
+            title: "添加用户角色",
+            area: ['40%', ''],
+            shade: 0.6,
+            skin: "layui-layer-rim",
+            content: $("#add_role").html(),
+            success: function () {
+                layui.use(['form',"jquery"], function () {
+                    var form = layui.form;
+                    $=layui.$;
+                    form.val("add_role", {
+                        "system": "{{ system }}",
+                        "username": "@amberdata.cn",
+                        "password": "Y+zilsR88g9SZI8WOeHJlA=="
+                    });
+                    //监听编辑用户信息，
+					form.on('radio', function (data) {
+                        console.log(data.elem); //得到radio原始DOM对象
+                        console.log(data.value); //被点击的radio的value
+						if (data.value=="erms"){
+						    $(".erms").show();
+						    $(".tdr").hide();
+						}
+						else if(data.value=="tdr"){
+						    $(".tdr").show();
+							$(".erms").hide();
+						}
+
+                    });
+                    form.on('submit(add_role)', function (data) {
+                        $.ajax({
+                            cache: false,
+                            url: "/systemrole/add_role/",
+                            dataType: 'text',
+                            type: 'POST',
+                            //async: false,
+                            data: {
+                                "system":data.field.system,
+                                "role":data.field.role,
+                                "identity":data.field.identity,
+                                "username": data.field.username,
+                                "password": data.field.password
+                            },
+                            success: function (data) {
+                                console.log("成功返回了.");
+                                console.log(typeof (data));
+                                let a = JSON.parse(data).msg;
+                                layer.msg(a, {
+                                    icon: 6,
+                                    offset: 't',
+                                    anim: 2,
+                                });
+                            },
+                            error: function (data) {
+                                let b = data.responseText;
+                                layer.msg(b, {
+                                    icon: 5,
+                                    offset: 't',
+                                    anim: 2,
+                                });
+                            },
+                            complete: function () {
+                                layer.close(add_role)
+
+                            }
+                        });
+                        return false;//阻止表单跳转
+                    });
+
+
+                });
+            }
+        });
+
+    }
     //编辑用户信息
     function update_role_info() {
         var update_role_info = layer.open({
@@ -1674,9 +1808,9 @@
             success: function () {
                 layui.use(['form',"jquery"], function () {
                     var form = layui.form;
-                    	$=layui.$;
+                    $=layui.$;
                     form.val("update_role_info", {
-                        "system":"{{ system }}",
+                        "system": "{{ system }}",
                         "username": "@amberdata.cn",
                         "password": "Y+zilsR88g9SZI8WOeHJlA=="
                     });
@@ -1722,10 +1856,6 @@
                             },
                             error: function (data) {
                                 let b = data.responseText;
-                                {#console.log(b);#}
-                                {#console.log(typeof (b));#}
-                                {#let a = JSON.stringify(b, null, 4);#}
-                                {#console.log(a);#}
                                 layer.msg(b, {
                                     icon: 5,
                                     offset: 't',
@@ -1790,9 +1920,9 @@
 <!--表头按钮 layui-btn-disabled-->
 <script type="text/html" id="toolbarDemo">
 	<div class="layui-btn-container">
-		<button type="button" onclick="add_case()" class="layui-btn layui-btn-sm">添加接口</button>
 		<button type="button" onclick="update_role_info()" class="layui-btn layui-btn-sm">用户信息</button>
-		<button class="layui-btn layui-btn-sm" lay-event="batch_delete">批量删除</button>
+        <button type="button" onclick="add_case()" class="layui-btn layui-btn-sm">添加接口</button>
+{#		<button class="layui-btn layui-btn-sm" lay-event="batch_delete">批量删除</button>#}
         <button class="layui-btn layui-btn-sm" lay-event="ding_ding">钉钉通知</button>
 		<button class="layui-btn layui-btn-sm layui-icon layui-icon-triangle-r" lay-event="run_case">执行</button>
 		<button class="layui-btn layui-btn-sm" lay-event="repeat_run">重复执行</button>
