--- a/ApiTest/templates/quickTest.html
+++ b/ApiTest/templates/quickTest.html
@@ -8,11 +8,9 @@
 	<link rel="icon" href="../static/images/favicon%202.ico">
 	<link rel="stylesheet" href="./../static/css/layui.css">
     <link rel="stylesheet" href="./../static/css/quickTest.css">
-	<link href="./../static/bootstrap-3.3.7-dist/css/bootstrap.min.css">
 
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-  	<script src="./../static/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 	<script src="./../static/js/layui/layui.js"></script>
+    <script src="./../static/jquery-3.4.1/jquery-3.4.1.min.js"></script>
 </head>
 
 <body>
