--- a/ApiTest/templates/processApi.html
+++ b/ApiTest/templates/processApi.html
@@ -341,6 +341,18 @@
                         </div>
                     </div>
 
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">负责人</label>
+                        <div class="layui-input-block">
+                            <select name="head" lay-verify="required">
+                                <option value="老张">老张</option>
+                                <option value="老王">老王</option>
+                                <option value="老李">老李</option>
+                                <option value="老江">老江</option>
+                                <option value="老刘">老刘</option>
+                            </select>
+                        </div>
+                    </div>
 
                     <div class="layui-form-item">
                         <div class="layui-input-block">
@@ -2322,7 +2334,7 @@
             title: "新建用例",
             skin: "layui-layer-molv",
             shade: 0.6,
-            area: ['35%', '90%'],
+            area: ['35%', '80%'],
             //offset: 't',
             content: $("#add_case").html(),
             success: function () {
@@ -2521,8 +2533,8 @@
 <!--表头按钮-->
 <script type="text/html" id="toolbarDemo">
     <div class="layui-btn-container">
-        <button type="button" onclick="add_case()" class="layui-btn layui-btn-sm">添加接口</button>
         <button type="button" onclick="update_role_info()" class="layui-btn layui-btn-sm">用户信息</button>
+        <button type="button" onclick="add_case()" class="layui-btn layui-btn-sm">添加接口</button>
         <button class="layui-btn layui-btn-sm" lay-event="batch_delete">批量删除</button>
 {#        <button class="layui-btn layui-btn-sm" lay-event="timing_task">定时任务</button>#}
         <button id="Dingding" class="layui-btn layui-btn-sm" lay-event="ding_ding">钉钉通知</button>
