--- a/ApiTest/static/css/singleApi.css
+++ b/ApiTest/static/css/singleApi.css
@@ -33,7 +33,7 @@
 }
 
 .layui-laypage .layui-laypage-curr .layui-laypage-em {
-    {#background-color: #FFB800;#}
+    /*#background-color: #FFB800;*/
 }
 
 .layui-layout-admin .layui-header {
