--- a/ApiTest/templates/index.html
+++ b/ApiTest/templates/index.html
@@ -1,126 +1,126 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Testapi-首页</title>
-	<meta name="renderer" content="webkit">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta http-equiv="Access-Control-Allow-Origin" content="*">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="format-detection" content="telephone=no">
+    <meta charset="utf-8">
+    <title>Testapi-首页</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="Access-Control-Allow-Origin" content="*">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
 
-	<link rel="icon" href="./../static/images/favicon%202.ico">
-	<link rel="stylesheet" href="./../static/js/layui/css/layui.css" media="all" />
-	<link rel="stylesheet" href="./../static/css/index.css" media="all" />
+    <link rel="icon" href="./../static/images/favicon%202.ico">
+    <link rel="stylesheet" href="./../static/js/layui/css/layui.css" media="all"/>
+    <link rel="stylesheet" href="./../static/css/index.css" media="all"/>
     <script type="text/javascript" src="./../static/js/layui2.5.5/layui.js"></script>
-	<script type="text/javascript" src="./../static/js/index.js"></script>
-	<script type="text/javascript" src="./../static/js/cache.js"></script>
+    <script type="text/javascript" src="./../static/js/index.js"></script>
+    <script type="text/javascript" src="./../static/js/cache.js"></script>
 </head>
 
 <body class="main_body">
-	<div class="layui-layout layui-layout-admin">
-		<!-- 顶部 -->
-		<div class="layui-header header">
-			<div class="layui-main mag0">
-				<a href="#" class="logo">Testapi-Zzh</a>
-				<!-- 显示/隐藏菜单 -->
-				<a href="javascript:;" class="seraph hideMenu layui-icon layui-icon-shrink-right"></a>
-				<!-- 顶级菜单 -->
-				<ul class="layui-nav topLevelMenus" pc>
-					<li class="layui-nav-item layui-this" data-menu="single" pc>
-						<a href="javascript:;"><i class="layui-icon" data-icon="&#xe6c9;">&#xe6c9;</i><cite>接口测试</cite></a>
-					</li>
-					<li class="layui-nav-item" data-menu="process" pc>
-						<a href="javascript:;"><i class="layui-icon" data-icon="&#xe600;">&#xe600;</i><cite>流程测试</cite></a>
-					</li>
-{#					<li class="layui-nav-item" data-menu="systemeSttings" pc>#}
-{#						<a href="javascript:;"><i class="layui-icon" data-icon="&#xe67a;">&#xe67a;</i><cite>Admin</cite></a>#}
-{#					</li>#}
-					<li class="layui-nav-item" data-menu="automation" pc>
-						<a href="javascript:;"><i class="layui-icon" data-icon="&#xe658;">&#xe658;</i><cite>UI自动化测试</cite></a>
-					</li>
-				</ul>
-			    <!-- 顶部右侧菜单 -->
-			    <ul class="layui-nav top_menu topLevelMenus">
-					<li class="layui-nav-item lockcms" pc>
-						<a href="javascript:;"><i class="seraph layui-icon layui-icon-password"></i><cite>锁屏</cite></a>
-					</li>
-					<li class="layui-nav-item" data-menu="systemeSttings" pc>
-						<a href="javascript:;"><i class="layui-icon" data-icon="&#xe614;">&#xe614;</i><cite>系统设置</cite></a>
-					</li>
-					<li class="layui-nav-item" id="userInfo">
-						<a href="javascript:;"><img src="./../static/images/login.png" class="layui-nav-img userAvatar" width="35" height="35"><cite class="adminName">朱占豪</cite></a>
-						<dl class="layui-nav-child">
-							<dd><a href="javascript:;" class="clearCache"><i class="layui-icon" data-icon="&#xe640;">&#xe640;</i><cite>清除缓存</cite><span class="layui-badge-dot"></span></a></dd>
-							<dd><a href="javascript:;" data-url="/web_info/"><i class="seraph layui-icon" data-icon="&#xe612;">&#xe612;</i><cite>个人资料</cite><span class="layui-badge-dot"></span></a></dd>
-							<dd><a href="javascript:;" class="showNotice"><i class="layui-icon">&#xe645;</i><cite>系统公告</cite><span class="layui-badge-dot"></span></a></dd>
-							<dd pc><a href="javascript:;" class="functionSetting"><i class="layui-icon">&#xe620;</i><cite>功能设定</cite><span class="layui-badge-dot"></span></a></dd>
-							<dd pc><a href="javascript:;" class="changeSkin"><i class="layui-icon">&#xe61b;</i><cite>更换皮肤</cite></a></dd>
-							<dd><a href="/logout/" class="signOut"><i class="seraph icon-tuichu"></i><cite>退出</cite></a></dd>
-						</dl>
-					</li>
-				</ul>
-			</div>
-		</div>
-		<!-- 左侧导航 -->
-		<div class="layui-side layui-bg-black">
-			<div class="user-photo">
-				<a class="img" title="我的头像" ><img src="./../static/images/login.png" class="userAvatar"></a>
-				<p>你好！<span class="userName">朱占豪</span>, 欢迎登录</p>
-			</div>
-			<!-- 搜索
-			<div class="layui-form component">
-				<select name="search" id="search" lay-search lay-filter="searchPage">
-					<option value="">搜索页面或功能</option>
-					<option value="1">layer</option>
-					<option value="2">form</option>
-				</select>
-				<i class="layui-icon">&#xe615;</i>
-			</div>-->
-			<div class="navBar layui-side-scroll" id="navBar">
-				<ul class="layui-nav layui-nav-tree">
-					<li class="layui-nav-item layui-this">
-						<a href="javascript:;" data-url="/web_welcome/">
-							<i class="layui-icon" data-icon=""></i><cite>后台首页</cite></a>
-					</li>
-				</ul>
-			</div>
-		</div>
-		<!-- 右侧内容 -->
-		<div class="layui-body layui-form">
-			<div class="layui-tab mag0" lay-filter="bodyTab" id="top_tabs_box">
-				<ul class="layui-tab-title top_tab" id="top_tabs">
-					<li class="layui-this" lay-id=""><i class="layui-icon">&#xe68e;</i> <cite>后台首页</cite></li>
-				</ul>
-				<ul class="layui-nav closeBox">
-				  <li class="layui-nav-item">
-				    <a href="javascript:;"><i class="layui-icon caozuo">&#xe643;</i> 页面操作</a>
-				    <dl class="layui-nav-child">
-					  <dd><a href="javascript:;" class="refresh refreshThis"><i class="layui-icon"></i> 刷新当前</a></dd>
-				      <dd><a href="javascript:;" class="closePageOther"><i class="seraph icon-prohibit"></i> 关闭其他</a></dd>
-				      <dd><a href="javascript:;" class="closePageAll"><i class="seraph icon-guanbi"></i> 关闭全部</a></dd>
-				    </dl>
-				  </li>
-				</ul>
+<div class="layui-layout layui-layout-admin">
+    <!-- 顶部 -->
+    <div class="layui-header header" style="background-color: #FFFFFF!important;color: #0C0C0C!important;">
+        <div class="layui-main">
+            <span style="color: #0C0C0C;"  class="logo">AutomationTest</span>
+            <!-- 显示/隐藏菜单 -->
+            <span><i href="javascript:;" class="seraph hideMenu layui-icon layui-icon-shrink-right"></i></span>
 
-				<div class="layui-tab-content clildFrame">
-					<div class="layui-tab-item layui-show">
-						<iframe src="/home/"></iframe>
-					</div>
-				</div>
 
-			</div>
-		</div>
-		<!-- 底部
-		<div class="layui-footer footer">
-			<p><span>copyright @2018 驊驊龔頾</span>　　<a onclick="donation()" class="layui-btn layui-btn-danger layui-btn-sm">捐赠作者</a></p>
-		</div> -->
-	</div>
-	<!-- 移动导航 -->
-	<div class="site-tree-mobile"><i class="layui-icon">&#xe602;</i></div>
-	<div class="site-mobile-shade"></div>
+            <!-- 顶级菜单 -->
+            <ul class="layui-nav topLevelMenus" style="padding-left: 5px;" pc>
+                <li class="layui-nav-item layui-this" data-menu="single" pc>
+                    <a style="color: #0C0C0C!important;" href="javascript:;"><i class="layui-icon" data-icon="&#xe6c9;">&#xe6c9;</i><cite>接口测试</cite></a>
+                </li>
+                <li class="layui-nav-item" data-menu="process" pc>
+                    <a style="color: #0C0C0C!important;" href="javascript:;"><i class="layui-icon" data-icon="&#xe600;">&#xe600;</i><cite>流程测试</cite></a>
+                </li>
+                {#					<li class="layui-nav-item" data-menu="systemeSttings" pc>#}
+                {#						<a href="javascript:;"><i class="layui-icon" data-icon="&#xe67a;">&#xe67a;</i><cite>Admin</cite></a>#}
+                {#					</li>#}
+                <li class="layui-nav-item" data-menu="automation" pc>
+                    <a style="color: #0C0C0C!important;" href="javascript:;"><i class="layui-icon"
+                                              data-icon="&#xe658;">&#xe658;</i><cite>UI自动化测试</cite></a>
+                </li>
+            </ul>
+            <!-- 顶部右侧菜单 -->
+            <ul class="layui-nav top_menu topLevelMenus" style="padding-right: 0px;">
+                <li class="layui-nav-item lockcms" pc>
+                    <a style="color: #0C0C0C!important;" href="javascript:;"><i class="seraph layui-icon layui-icon-password"></i><cite>锁屏</cite></a>
+                </li>
+                <li class="layui-nav-item" data-menu="systemeSttings" pc>
+                    <a style="color: #0C0C0C!important;" href="javascript:;"><i class="layui-icon" data-icon="&#xe614;">&#xe614;</i><cite>系统设置</cite></a>
+                </li>
+                <li class="layui-nav-item" id="userInfo">
+                    <a style="color: #0C0C0C!important;" href="javascript:;"><img src="./../static/images/login.png" class="layui-nav-img userAvatar"
+                                                width="35" height="35"><cite class="adminName">朱占豪</cite></a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;" class="clearCache"><i class="layui-icon" data-icon="&#xe640;">&#xe640;</i><cite>清除缓存</cite><span
+                                class="layui-badge-dot"></span></a></dd>
+                        <dd><a href="javascript:;" data-url="/web_info/"><i class="seraph layui-icon"
+                                                                            data-icon="&#xe612;">&#xe612;</i><cite>个人资料</cite><span
+                                class="layui-badge-dot"></span></a></dd>
+                        <dd><a href="javascript:;" class="showNotice"><i
+                                class="layui-icon">&#xe645;</i><cite>系统公告</cite><span
+                                class="layui-badge-dot"></span></a></dd>
+                        <dd pc><a href="javascript:;" class="functionSetting"><i class="layui-icon">&#xe620;</i><cite>功能设定</cite><span
+                                class="layui-badge-dot"></span></a></dd>
+                        <dd pc><a href="javascript:;" class="changeSkin"><i
+                                class="layui-icon">&#xe61b;</i><cite>更换皮肤</cite></a></dd>
+                        <dd><a href="/logout/" class="signOut"><i class="seraph icon-tuichu"></i><cite>退出</cite></a>
+                        </dd>
+                    </dl>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- 左侧导航 -->
+    <div class="layui-side layui-bg-black">
+        <div class="user-photo">
+            <a class="img" title="我的头像">
+                <img src="./../static/images/login.png" class="userAvatar">
+            </a>
+            <p style="color: #0C0C0C;">你好！<span class="userName">朱占豪</span>, 欢迎登录</p>
+        </div>
+        <div class="navBar layui-side-scroll" id="navBar">
+            <ul class="layui-nav layui-nav-tree">
+                <li class="layui-nav-item layui-this">
+                    <a href="javascript:;" data-url="/web_welcome/">
+                        <i class="layui-icon" data-icon=""></i><cite>后台首页</cite></a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- 右侧内容 -->
+    <div class="layui-body layui-form">
+        <div class="layui-tab mag0" lay-filter="bodyTab" id="top_tabs_box">
+            <ul class="layui-tab-title top_tab" id="top_tabs">
+                <li class="layui-this" lay-id=""><i class="layui-icon">&#xe68e;</i> <cite>后台首页</cite></li>
+            </ul>
+            <ul class="layui-nav closeBox">
+                <li class="layui-nav-item">
+                    <a href="javascript:;"><i class="layui-icon caozuo">&#xe643;</i> 页面操作</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="javascript:;" class="refresh refreshThis"><i class="layui-icon"></i> 刷新当前</a></dd>
+                        <dd><a href="javascript:;" class="closePageOther"><i class="seraph icon-prohibit"></i> 关闭其他</a>
+                        </dd>
+                        <dd><a href="javascript:;" class="closePageAll"><i class="seraph icon-guanbi"></i> 关闭全部</a></dd>
+                    </dl>
+                </li>
+            </ul>
+
+            <div class="layui-tab-content clildFrame">
+                <div class="layui-tab-item layui-show">
+                    <iframe src="/home/"></iframe>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
 </body>
 
 </html>
