--- a/ApiTest/templates/link.html
+++ b/ApiTest/templates/link.html
@@ -1,25 +1,245 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Testapi-友情链接</title>
-	<meta name="renderer" content="webkit">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<meta name="format-detection" content="telephone=no">
+    <meta charset="utf-8">
+    <title>Testapi-友情链接</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="format-detection" content="telephone=no">
 
-	<link rel="stylesheet" href="./../static/css/layui.css">
-    <script type="text/javascript" src="./../static/js/layui/layui.js"></script>
+    <link rel="stylesheet" href="./../static/css/layui.css">
+    <link rel="stylesheet" href="./../static/css/btn.css">
+
+    <script src="./../static/jquery-3.4.1/jquery-3.4.1.min.js" type="text/javascript"></script>
+    <script src="../static/js/layui2.5.5/layui.js"></script>
     <script type="text/javascript" src="./../static/js/linkList.js"></script>
+
+    <style>
+        .layui-laypage a, .layui-laypage span {
+            color: #fff;
+        }
+
+        .layui-table-page .layui-laypage {
+            position: fixed;
+            right: 30px;
+        }
+        .layui-table-tool .layui-btn-container{
+            margin-top: -15px;
+            margin-bottom: -15px;
+        }
+
+        @import url(https://fonts.googleapis.com/css?family=Lato);
+
+        .btn {
+            position: relative;
+            padding: 0.3rem 1rem;
+            font-family: Lato, sans-serif;
+            font-size: 1rem;
+            line-height: 1.5;
+            color: black;
+            text-decoration: none;
+            background-color: white;
+            border: transparent;
+            outline: transparent;
+            cursor: pointer;
+            user-select: none;
+            white-space: nowrap;
+            animation: glow 8s linear infinite;
+        }
+
+        .btn-gradient {
+            color: white;
+            background: linear-gradient(90deg, #00dbde, #fc00ff, #00dbde);
+            background-size: 300%;
+            border-radius: 2em;
+        }
+
+        .btn-gradient::before {
+            position: absolute;
+            content: "";
+            top: -5px;
+            left: -5px;
+            bottom: -5px;
+            right: -5px;
+            z-index: -1;
+            background: inherit;
+            background-size: inherit;
+            border-radius: 4em;
+            opacity: 0;
+            transition: 0.5s;
+        }
+
+        .btn-gradient:hover::before {
+            opacity: 1;
+            filter: blur(20px);
+            animation: glow 8s linear infinite;
+        }
+
+        @keyframes glow {
+            to {
+                background-position: 300%;
+            }
+        }
+    </style>
 </head>
 
-<body class="childrenBody">
-	<blockquote class="layui-elem-quote quoteBox">
-		<div>以下是本系统依赖的一些网站</div>
-	</blockquote>
-	<table id="linkList" lay-filter="linkList"></table>
+<body class="childrenBody"  style="background-color:lightsteelblue;">
+<!--添加收藏-->
+<div class="layui-row" id="add_link" style="display: none;">
+    <div class="layui-col-md11">
+        <form class="layui-form" lay-filter="add_link">
+
+            <div class="layui-form-item" style="margin-top: 20px;">
+                <label class="layui-form-label">网站Logo</label>
+                <div class="layui-input-block">
+                    <input type="text" name="logo" required lay-verify="required"
+                           placeholder="请输网站Logo" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">网站名称</label>
+                <div class="layui-input-block">
+                    <input type="text" name="name" required lay-verify="required"
+                           placeholder="请输入网站名称" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">网站地址</label>
+                <div class="layui-input-block">
+                    <input type="text" name="url" required lay-verify="required"
+                           placeholder="请输入网站地址" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item" style="margin-top: 30px;">
+                <div class="layui-input-block">
+                    <button class="btn btn-primary btn-finger layui-btn"  lay-submit lay-filter="add_link"
+                            style="float:right;">确定
+                    </button>
+                </div>
+            </div>
+        </form>
+        +
+    </div>
+</div>
+<!--编辑收藏-->
+<div class="layui-row" id="update_link" style="display: none;">
+    <div class="layui-col-md11">
+        <form class="layui-form" lay-filter="update_link">
+
+            <div class="layui-form-item" style="margin-top: 20px;">
+                <label class="layui-form-label">网站Logo</label>
+                <div class="layui-input-block">
+                    <input type="text" name="logo" required lay-verify="required"
+                           placeholder="请输网站Logo" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">网站名称</label>
+                <div class="layui-input-block">
+                    <input type="text" name="name" required lay-verify="required"
+                           placeholder="请输入网站名称" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">网站地址</label>
+                <div class="layui-input-block">
+                    <input type="text" name="url" required lay-verify="required"
+                           placeholder="请输入网站地址" autocomplete="off" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item" style="margin-top: 30px;">
+                <div class="layui-input-block">
+                    <button class="btn btn-primary btn-finger layui-btn"  lay-submit lay-filter="update_link"
+                            style="float:right;">确定
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+<blockquote class="layui-elem-quote quoteBox">
+    <div>以下列表是本人收藏的一些网站、博客，欢迎补充</div>
+</blockquote>
+
+<table id="linkList" lay-filter="linkList"></table>
+
+
+<script type="text/html" id="toolbarDemo">
+    <div class="layui-btn-container">
+        <button type="button" onclick="add_link()" class="btn btn-gradient">添加收藏</button>
+    </div>
+</script>
+
+<script type="text/html" id="barDemo">
+    <a class="layui-icon layui-icon-tips"
+       style="color:#797979;font-size: 20px;padding:0 2px;vertical-align:middle;font-weight: lighter;"
+       lay-event="update_link"></a>
+</script>
+<script>
+    //添加收藏
+    function add_link() {
+        var add_link = layer.open({
+            //layer提供了5种层类型。可传入的值有：0（信息框，默认）1（页面层）2（iframe层）3（加载层）4（tips层）
+            type: 1,
+            title: "添加收藏",
+            area: ['40%', ''],
+            shade: 0.6,
+            skin: "layui-layer-rim",
+            content: $("#add_link").html(),
+            success: function () {
+                layui.use(['form', 'jquery'], function () {
+                    var form = layui.form,
+                        $ = layui.$;
+                    form.val("add_link");
+                    form.on('submit(add_link)', function (data) {
+                        $.ajax({
+                            url: "/link/add_link/",
+                            type: 'POST',
+                            data: JSON.stringify({
+                                "logo": data.field.logo,
+                                "url": data.field.url,
+                                "websites": data.field.name,
+                            }),
+                            headers:{
+                                "Content-Type":"application/json"
+                            },
+                            success: function (data) {
+                                if(data.code === 1000){
+                                    layer.msg(data.msg,{
+                                        icon:6, offset:"t"
+                                    })
+                                }else{
+                                    layer.msg(data.error,{
+                                        icon:5,offset:"t"
+                                    })
+                                }
+                                $(".layui-laypage-btn").click();
+                            },
+
+                            error: function () {
+                                layer.msg("回调失败", {
+                                    icon: 5,
+                                    offset: 't'
+                                });
+                            },
+                            complete: function () {
+                                layer.close(add_link)
+
+                            }
+                        });
+                        return false;//阻止表单跳转
+                    });
+
+
+                });
+            }
+        });
+
+    }
+</script>
 </body>
 
 </html>
