--- a/ApiTest/templates/index.html
+++ b/ApiTest/templates/index.html
@@ -88,7 +88,7 @@
             <ul class="layui-nav layui-nav-tree">
                 <li class="layui-nav-item layui-this">
                     <a href="javascript:;" data-url="/web_welcome/">
-                        <i class="layui-icon" data-icon=""></i><cite>后台首页</cite></a>
+                        <i class="layui-icon" data-icon="" style="color: #FFF!important;"></i><cite style="color: #FFF!important;">后台首页</cite></a>
                 </li>
             </ul>
         </div>
