--- a/ApiTest/templates/apiDetail.html
+++ b/ApiTest/templates/apiDetail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{#<!DOCTYPE html>#}
 <html lang="en">
 <head>
 	<meta charset="utf-8">
@@ -216,53 +216,6 @@
             docE.webkitRequestFullScreen();
         }
     }
-
-    // 退出全屏
-    {#function exitFullScreen() {#}
-    {#    var docE = document;#}
-    {#    if (docE.exitFullscreen) {#}
-    {#        docE.exitFullscreen();#}
-    {#    } else if (docE.mozCancelFullScreen) {#}
-    {#        docE.mozCancelFullScreen();#}
-    {#    } else if (docE.webkitCancelFullScreen) {#}
-    {#        docE.webkitCancelFullScreen();#}
-    {#    }#}
-    {#    // 全屏开启#}
-    {#    form.on('switch(fullscreen)', function (data) {#}
-    {#        var fValue = data.elem.checked;#}
-    {#        localStorage.setItem('funnscreen_info', fValue);#}
-    {#    });#}
-    {#    $(document).ready(function () {#}
-    {#        var fScreen = localStorage.getItem('fullscreen_info');#}
-    {#        if (fScreen && fScreen != 'false') {#}
-    {#            var fScreenIndex = layer.alert('按ESC退出全屏', {#}
-    {#                    title: '进入全屏提示信息',#}
-    {#                    skin: 'layui-layer-lan',#}
-    {#                    closeBtn: 0,#}
-    {#                    anim: 4,#}
-    {#                    offset: '100px'#}
-    {#                }, function () {#}
-    {#                    entryFullScreen();#}
-    {#                    $('#FullScreen').html('<i class="larry-icon larry-quanping"></i>退出全屏');#}
-    {#                    layer.close(fScreenIndex);#}
-    {#                }#}
-    {#            )#}
-    {#        }#}
-    {#    })#}
-    {#    // 全屏切换#}
-    {#    $('#FullScreen').bind('click', function () {#}
-    {#        var fullscreenElement =#}
-    {#            document.fullscreenElement ||#}
-    {#            document.mozFullScreenElement ||#}
-    {#            document.webkitFullscreenElement;#}
-    {#        if (fullscreenElement == null) {#}
-    {#            entryFullScreen();#}
-    {#            $(this).html('<i class="larry-icon">&#xe604;</i>退出全屏');#}
-    {#        } else {#}
-    {#            exitFullScreen();#}
-    {#            $(this).html('<i class="larry-icon">&#xe604;</i>全屏');#}
-    {#        }#}
-    {#    })#}
 </script>
 
 </body>
