--- a/ApiTest/templates/quickTest.html
+++ b/ApiTest/templates/quickTest.html
@@ -1,151 +1,152 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Testapi-快速测试</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Testapi-快速测试</title>
 
-	<link rel="icon" href="../static/images/favicon%202.ico">
-	<link rel="stylesheet" href="./../static/css/layui.css">
+    <link rel="icon" href="../static/images/favicon%202.ico">
+    <link rel="stylesheet" href="./../static/css/layui.css">
     <link rel="stylesheet" href="./../static/css/quickTest.css">
 
-	<script src="./../static/js/layui/layui.js"></script>
+    <script src="./../static/js/layui/layui.js"></script>
     <script src="./../static/jquery-3.4.1/jquery-3.4.1.min.js"></script>
 </head>
 
 <body>
 <div class="layui-layout layui-layout-admin">
-	<!--快速测试-->
-	<div class="layui-row" id="quickTest">
-		<div class="modal fade">
-			<div class="modal-content">
-				<div class="modal-header" style="margin-top: 10px;">
-					<img src="./../static/images/quickTest.png" style="margin-left: 460px;">
-				</div>
-				<div class="modal-body">
-					<form class="layui-form" lay-filter="quickTest">
+    <!--快速测试-->
+    <div class="layui-row" id="quickTest">
+        <div class="modal fade">
+            <div class="modal-content">
+                <div class="modal-header" style="margin-top: 10px;">
+                    <img src="./../static/images/quickTest.png" style="margin-left: 460px;">
+                </div>
+                <div class="modal-body">
+                    <form class="layui-form" lay-filter="quickTest">
 
-						<div class="layui-form-item" style="margin-top: 20px;">
-							<label class="layui-form-label">Request</label>
-							<div class="layui-inline">
-								<div class="layui-input-inline" id="method" style="width: 120px;">
-									<select name="addMethod" id="addMethod">
-										<option>GET</option>
-										<option>POST</option>
-										<option>DELETE</option>
-										<option>PUT</option>
-									</select>
-								</div>
-							</div>
-							<div class="layui-inline">
-								<div class="layui-input-inline">
-									<input type="text" name="addUrl" class="layui-input"
-										   style="width: 790px;margin-left: -25px;" maxlength="300" id="addUrl"
-										   placeholder="url">
-								</div>
-							</div>
-							<div class="layui-inline" style="margin-left: 555px;">
-								<button type="submit" class="layui-btn  layui-btn-warm" data-dismiss="modal"
-										id="addsubmitBtn" lay-filter="quickTest">Send
-								</button>
-							</div>
-						</div>
-						<div id="addheadersdiv" name="addheadersdiv" style="margin-top: 30px;">
-							<label class="layui-form-label">Headers</label>
-							<div class="layui-input-inline">
-								<ul id="headers" style="list-style-type: none">
-									<li style="margin-bottom:1px;">
-										<input id="headers_data" class="addheaders myinput" maxlength="300"
-											   name="headers_key"
-											   type="text" placeholder="Key" value="accessToken"/>
-										<input class="addheaders myinput" name="headers_value" type="text"
-											   placeholder="Value"/>
+                        <div class="layui-form-item" style="margin-top: 20px;">
+                            <label class="layui-form-label">Request</label>
+                            <div class="layui-inline">
+                                <div class="layui-input-inline" id="method" style="width: 120px;">
+                                    <select name="addMethod" id="addMethod">
+                                        <option>GET</option>
+                                        <option>POST</option>
+                                        <option>DELETE</option>
+                                        <option>PUT</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="layui-inline">
+                                <div class="layui-input-inline">
+                                    <input type="text" name="addUrl" class="layui-input"
+                                           style="width: 790px;margin-left: -25px;" maxlength="300" id="addUrl"
+                                           placeholder="url">
+                                </div>
+                            </div>
+                            <div class="layui-inline" style="margin-left: 555px;">
+                                <button type="submit" class="layui-btn  layui-btn-warm" data-dismiss="modal"
+                                        id="addsubmitBtn" lay-filter="quickTest">Send
+                                </button>
+                            </div>
+                        </div>
+                        <div id="addheadersdiv" name="addheadersdiv" style="margin-top: 30px;">
+                            <label class="layui-form-label">Headers</label>
+                            <div class="layui-input-inline">
+                                <ul id="headers" style="list-style-type: none">
+                                    <li style="margin-bottom:1px;">
+                                        <input id="headers_data" class="addheaders myinput" maxlength="300"
+                                               name="headers_key"
+                                               type="text" placeholder="Key" value="accessToken"/>
+                                        <input class="addheaders myinput" name="headers_value" type="text"
+                                               placeholder="Value"/>
 
-										<input id="addheaders" type="button" class="layui-btn  layui-btn-normal mybtn"
-											   value="+" style="width: 36px;font-size: 20px;margin-right: -10px;">
-										<input id="delheaders" type="button" class="layui-btn  layui-btn-danger mybtn"
-											   style="width: 36px;font-size: 20px;" value="-">
-										<input id="addmergeheaders" type="text" style="display:None" maxlength="5000"
-											   name="addmergeheaders"/>
-									</li>
-								</ul>
-							</div>
-						</div>
-						{#						<hr class="layui-bg-gray">#}
+                                        <input id="addheaders" type="button" class="layui-btn  layui-btn-normal mybtn"
+                                               value="+" style="width: 36px;font-size: 20px;margin-right: -10px;">
+                                        <input id="delheaders" type="button" class="layui-btn  layui-btn-danger mybtn"
+                                               style="width: 36px;font-size: 20px;" value="-">
+                                        <input id="addmergeheaders" type="text" style="display:None" maxlength="5000"
+                                               name="addmergeheaders"/>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        {#						<hr class="layui-bg-gray">#}
 
 
-						{#						<hr class="layui-bg-gray">#}
-						<div id="addformdatadiv" name="addformdatadiv" style="margin-top: 30px;">
-							<label class="layui-form-label">Params</label>
-							<div class="layui-input-inline">
-								<ul id="formdatas" style="list-style-type: none">
-									<li style="margin-bottom:1px;">
-										<input type="text" class="addformdata myinput" maxlength="300"
-											   name="formdatas_key"
-											   placeholder="Key"/>
-										<input type="text" class="addformdata myinput" name="formdatas_value"
-											   placeholder="Value"/>
+                        {#						<hr class="layui-bg-gray">#}
+                        <div id="addformdatadiv" name="addformdatadiv" style="margin-top: 30px;">
+                            <label class="layui-form-label">Params</label>
+                            <div class="layui-input-inline">
+                                <ul id="formdatas" style="list-style-type: none">
+                                    <li style="margin-bottom:1px;">
+                                        <input type="text" class="addformdata myinput" maxlength="300"
+                                               name="formdatas_key"
+                                               placeholder="Key"/>
+                                        <input type="text" class="addformdata myinput" name="formdatas_value"
+                                               placeholder="Value"/>
 
-										<input id="addformdata" type="button" class="layui-btn  layui-btn-normal mybtn"
-											   style="width: 36px;font-size: 20px;margin-right: -10px;"
-											   value="+">
-										<input id="delformdata" type="button" class="layui-btn  layui-btn-danger mybtn"
-											   style="width: 36px;font-size: 20px;"
-											   value="-">
-										<input id="addmergeformdatas" type="text" style="display:None" maxlength="5000"
-											   name="addmergeformdatas"/>
-									</li>
-								</ul>
-							</div>
-						</div>
-						{#						<hr class="layui-bg-gray">#}
-						<div class="layui-form-item layui-form-text" style="margin-top: 30px;">
-							<label class="layui-form-label">Body</label>
-							<div class="layui-input-block">
+                                        <input id="addformdata" type="button" class="layui-btn  layui-btn-normal mybtn"
+                                               style="width: 36px;font-size: 20px;margin-right: -10px;"
+                                               value="+">
+                                        <input id="delformdata" type="button" class="layui-btn  layui-btn-danger mybtn"
+                                               style="width: 36px;font-size: 20px;"
+                                               value="-">
+                                        <input id="addmergeformdatas" type="text" style="display:None" maxlength="5000"
+                                               name="addmergeformdatas"/>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        {#						<hr class="layui-bg-gray">#}
+                        <div class="layui-form-item layui-form-text" style="margin-top: 30px;">
+                            <label class="layui-form-label">Body</label>
+                            <div class="layui-input-block">
 								<textarea id="body" name="body" placeholder="仅支持输入JSON格式的内容数据" class="layui-textarea"
-										  style="width: 910px;height: 300px;"></textarea>
-							</div>
-						</div>
+                                          style="width: 910px;height: 300px;"></textarea>
+                            </div>
+                        </div>
 
-{#						<div class="layui-form-item layui-form-text" style="margin-top: 30px;">#}
-{#							<label class="layui-form-label">response</label>#}
-{#							<div class="layui-input-inline">#}
-{#								<textarea id="response" name="response" class="layui-textarea"#}
-{#										  style="width: 910px;height: 500px;" placeholder="响应内容在此区域展示"></textarea>#}
-{#							</div>#}
-{#							<label class="layui-form-label" style="width: 112px;color: chocolate;font-family:cursive">默认复制结果内容</label><br><br><br>#}
-{#							<div class="layui-inline">#}
-{#								<input type="button" class="layui-btn layui-btn-warm" id="jsoncn" value="前往json.cn粘贴"/>#}
-{#							</div>#}
-{#						</div>#}
+                        {#						<div class="layui-form-item layui-form-text" style="margin-top: 30px;">#}
+                        {#							<label class="layui-form-label">response</label>#}
+                        {#							<div class="layui-input-inline">#}
+                        {#								<textarea id="response" name="response" class="layui-textarea"#}
+                        {#										  style="width: 910px;height: 500px;" placeholder="响应内容在此区域展示"></textarea>#}
+                        {#							</div>#}
+                        {#							<label class="layui-form-label" style="width: 112px;color: chocolate;font-family:cursive">默认复制结果内容</label><br><br><br>#}
+                        {#							<div class="layui-inline">#}
+                        {#								<input type="button" class="layui-btn layui-btn-warm" id="jsoncn" value="前往json.cn粘贴"/>#}
+                        {#							</div>#}
+                        {#						</div>#}
 
 
-						<div class="layui-collapse" lay-filter="test">
-							<div class="layui-colla-item">
-								<h2 class="layui-colla-title">测试已完成，快点我获取响应结果吧~~~</h2>
-								<div class="layui-colla-content">
-									<div class="layui-form-item layui-form-text">
-										<label class="layui-form-label">response</label>
-										<div class="layui-input-inline">
+                        <div class="layui-collapse" lay-filter="test">
+                            <div class="layui-colla-item">
+                                <h2 class="layui-colla-title">测试已完成，快点我获取响应结果吧~~~</h2>
+                                <div class="layui-colla-content">
+                                    <div class="layui-form-item layui-form-text">
+                                        <label class="layui-form-label">response</label>
+                                        <div class="layui-input-inline">
 											<textarea id="responses" name="response" class="layui-textarea"
-										  style="width: 910px;height: 500px;" placeholder="响应内容在此区域展示"></textarea>
-										</div>
-										<label class="layui-form-label"
-											   style="width: 112px;color: chocolate;font-family:cursive">默认复制结果内容</label><br><br><br>
-										<div class="layui-inline">
-											<input type="button" class="layui-btn layui-btn-warm" id="jsoncn"
-												   value="前往json.cn粘贴"/>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+                                                      style="width: 910px;height: 500px;"
+                                                      placeholder="响应内容在此区域展示"></textarea>
+                                        </div>
+                                        <label class="layui-form-label"
+                                               style="width: 112px;color: chocolate;font-family:cursive">默认复制结果内容</label><br><br><br>
+                                        <div class="layui-inline">
+                                            <input type="button" class="layui-btn layui-btn-warm" id="jsoncn"
+                                                   value="前往json.cn粘贴"/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
-					</form>
-				</div>
-			</div>
-		</div>
-	</div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
@@ -158,10 +159,8 @@
             console.log(data);
             $.ajax({
                 cache: false,
-                url: "/quicktest/run/",
-                dataType: 'json',
+                url: "/api/v1/singleapi/quickrun/",
                 type: 'POST',
-                //async: false,
                 data: {
                     "addURL": $("#addUrl").val(),
                     "Method": $("#addMethod").val(),
@@ -173,32 +172,25 @@
                     l_index = layer.load(0, {shade: [0.5, '#DBDBDB']});
                 },
                 success: function (data) {
-                    //var res = JSON.stringify(data, null, 4);
-                    let res = JSON.parse(data);
-                    $("#responses").val(data);
-                    if (res.code != 200) {
-                        layer.msg("操作成功", {
-                            icon: 6,
-                            offset: 't'
-                        });
+                    $("#responses").val(data.data);
+                    if (data.code === 1000) {
+                        layer.msg(data.msg, {
+                            icon: 6, offset: "t"
+                        })
                     } else {
-                        layer.msg(res.msg, {
-                            icon: 5,
-                            offset: 't',
-                            time: 3000
-                        });
+                        layer.msg(data.error, {
+                            icon: 5, offset: "t"
+                        })
                     }
                 },
                 error: function (data) {
-                    console.log(data);
-                    layer.msg(data, {
+                    layer.msg("回调失败", {
                         icon: 5,
                         offset: 't',
                     });
                 },
                 complete: function () {
                     layer.close(l_index);
-                    //layer.close(a)
                 }
 
             });
