--- a/ApiTest/templates/singleApi.html
+++ b/ApiTest/templates/singleApi.html
@@ -1034,7 +1034,7 @@
                                 }
                                 $(".layui-laypage-btn").click();
                             },
-                            error: function () {
+                            error: function (data) {
                                 layer.msg("回调失败", {
                                     icon: 5,
                                     offset: 't'
