--- a/ApiTest/templates/processApi.html
+++ b/ApiTest/templates/processApi.html
@@ -2420,7 +2420,7 @@
         <button type="button" onclick="add_case()" class="layui-btn layui-btn-sm">添加接口</button>
         <button class="layui-btn layui-btn-sm" lay-event="batch_delete">批量删除</button>
         <button id="Dingding" class="layui-btn layui-btn-sm" lay-event="ding_ding">钉钉通知</button>
-        <button id="Runcase" class="layui-btn layui-btn-sm layui-icon layui-icon-triangle-r" lay-event="run_case">执行
+        <button id="Runcase" class="layui-btn layui-btn-sm" lay-event="run_case">执行接口
         </button>
     </div>
 </script>
