--- a/ApiTest/templates/singleApi.html
+++ b/ApiTest/templates/singleApi.html
@@ -749,9 +749,9 @@
             , cols: [[ //表头, fixed: 'left'
                 {type: 'checkbox'}
                 , {title: '操作', toolbar: '#barDemo', width: 80, align: "left"}
-                , {field: 'caseid', title: '序号', width: 60, align: "left"}
+                {#, {field: 'caseid', title: '序号', width: 60, align: "left"}#}
                 //, {field: 'sort', title: '排序号', width: 60,  align: "left"}
-                , {field: 'identity', title: '', width: 100, align: "left", templet: "#identityTpl"}
+                , {field: 'identity', title: '角色', width: 100, align: "left", templet: "#identityTpl"}
                 , {
                     field: 'casename',
                     title: '接口名称',
@@ -997,12 +997,13 @@
                                                                 layer.msg(data.msg, {
                                                                     icon: 6, offset: "t"
                                                                 })
+                                                                table.reload(this.id);
                                                             } else {
                                                                 layer.msg(data.error, {
                                                                     icon: 5, offset: "t"
                                                                 })
                                                             }
-                                                            table.reload(this.id);
+                                                            //table.reload(this.id);
                                                         },
                                                         error: function () {
                                                             layer.msg("回调失败", {
@@ -2296,7 +2297,7 @@
         <button type="button" onclick="update_role_info()" class="layui-btn layui-btn-sm">用户信息</button>
         <button type="button" onclick="add_case()" class="layui-btn layui-btn-sm">添加接口</button>
         <button class="layui-btn layui-btn-sm" lay-event="ding_ding">钉钉通知</button>
-        <button class="layui-btn layui-btn-sm layui-icon layui-icon-triangle-r" lay-event="run_case">执行</button>
+        <button class="layui-btn layui-btn-sm" lay-event="run_case">执行接口</button>
         <button class="layui-btn layui-btn-sm" lay-event="repeat_run">重复执行</button>
         <button class="layui-btn layui-btn-sm" lay-event="locust">性能测试</button>
     </div>
